--- a/server/public/index.html
+++ b/server/public/index.html
@@ -29,33 +29,14 @@
   <link rel="stylesheet" href="/styles/styles.css"></link>
   <script src="scripts/controllers/user.controller.js" charset="utf-8"></script>
   <script src="scripts/controllers/navbar.controller.js"></script>
+  <script src="scripts/controllers/codetiles.controller.js"></script>
   <script src="scripts/services/github.service.js" charset="utf-8"></script>
 
 </head>
-
 <body ng-app="myApp">
-  <div ng-controller="NavCtrl" ng-cloak>
-    <md-content class="md-padding">
-      <md-nav-bar md-no-ink-bar="disableInkBar" md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
-        <md-nav-item md-nav-click="goto('home')" name="home">
-          Home
-        </md-nav-item>
-        <md-nav-item mdNavHref="/aboutme" md-nav-click="goto('aboutMe')" name="aboutMe">
-          About Me
-        </md-nav-item>
-        <md-nav-item md-nav-click="goto('myProjects')" name="myProjects">
-          My Projects
-        </md-nav-item>
-      </md-nav-bar>
-      <div class="ext-content">
-        <h1><span>{{currentNavItem}}</span></h1>
-        <main ng-view>
-        </main>
-      </div>
-
-    </md-content>
-  </div>
-
+  <header ng-include="'/views/navbar.html'"></header> 
+  <main ng-view>
+  </main>
 </body>
 
 </html>
