--- a/server/public/index.html
+++ b/server/public/index.html
@@ -26,6 +26,7 @@
   <!-- vv required -->
   <script src="/scripts/client.js"></script>
   <link rel="stylesheet" href="https://gitcdn.link/repo/angular/bower-material/master/angular-material.css">
+  <!-- <link rel="stylesheet" href="/styles/materialTheme.css"> -->
   <link rel="stylesheet" href="/styles/styles.css"></link>
   <script src="scripts/controllers/user.controller.js" charset="utf-8"></script>
   <script src="scripts/controllers/navbar.controller.js"></script>
